--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "A simple data dump api",
   "main": "nd.js",
   "scripts": {
+    "start": "nd.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "James Powell",
