--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
   "license": "MIT",
   "devDependencies": {
     "fs-extra": "^0.30.0",
-    "mime-types": "^2.1.11"
+    "mime-types": "^2.1.11",
+    "request": "^2.72.0"
   },
   "engines": {
     "node": "0.10.40",
